--- a/index.html
+++ b/index.html
@@ -1,133 +1,136 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Интернет-магазин «Девайс»</title>
+    <title>Главная - Интернет-магазин «Девайс»</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
-    <header>
-      <nav>
-        <a>
-          <img src="https://via.placeholder.com/163x35" alt="Логотип магазина «Девайс»" width="163" height="35">
+  <body class="page-body">
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/logo-device.svg" alt="Логотип магазина «Девайс»" width="163" height="35">
         </a>
-        <form action="https://echo.htmlacademy.ru" method="get">
-          <input type="search" name="search" placeholder="Поиск по сайту">
-          <input type="submit" value="Найти">
-        </form>
-        <ul>
-          <li>
-            <a href="blank.html">Войти</a>
-          </li>
-          <li>
-            <a href="blank.html">Сравнить</a>
-          </li>
-          <li>
-            <a href="blank.html">Корзина</a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href="catalog.html">Каталог товаров</a>
-            <ul>
-              <li>
-                <a href="blank.html">Виртуальная реальность</a>
-              </li>
-              <li>
-                <a href="blank.html">Фитнес-браслеты</a>
-              </li>
-              <li>
-                <a href="blank.html">Квадрокоптер</a>
-              </li>
-              <li>
-                <a href="blank.html">Моноподы для селфи</a>
-              </li>
-              <li>
-                <a href="blank.html">Умные часы</a>
-              </li>
-              <li>
-                <a href="blank.html">Экшн-камеры</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="blank.html">Доставка</a>
-          </li>
-          <li>
-            <a href="blank.html">Гарантия</a>
-          </li>
-          <li>
-            <a href="blank.html">Контакты</a>
-          </li>
-        </ul>
+        <div class="main-navigation-container">
+          <form class="main-navigation-form" action="https://echo.htmlacademy.ru" method="get">
+            <input type="search" name="search" placeholder="Поиск по сайту">
+            <input type="submit" value="Найти">
+          </form>
+          <ul class="user-navigation">
+            <li>
+              <a class="user-navigation-link" href="blank.html">Войти</a>
+            </li>
+            <li>
+              <a class="user-navigation-link" href="blank.html">Сравнить</a>
+            </li>
+            <li>
+              <a class="user-navigation-link" href="blank.html">Корзина</a>
+            </li>
+          </ul>
+          <ul class="site-navigation">
+            <li>
+              <a class="site-navigation-link" href="catalog.html">Каталог товаров</a>
+              <ul class="dropdown-navigation">
+                <li>
+                  <a class="dropdown-navigation-link" href="blank.html">Виртуальная реальность</a>
+                </li>
+                <li>
+                  <a class="dropdown-navigation-link" href="blank.html">Фитнес-браслеты</a>
+                </li>
+                <li>
+                  <a class="dropdown-navigation-link" href="blank.html">Квадрокоптер</a>
+                </li>
+                <li>
+                  <a class="dropdown-navigation-link" href="blank.html">Моноподы для селфи</a>
+                </li>
+                <li>
+                  <a class="dropdown-navigation-link" href="blank.html">Умные часы</a>
+                </li>
+                <li>
+                  <a class="dropdown-navigation-link" href="blank.html">Экшн-камеры</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a class="site-navigation-link" href="blank.html">Доставка</a>
+            </li>
+            <li>
+              <a class="site-navigation-link" href="blank.html">Гарантия</a>
+            </li>
+            <li>
+              <a class="site-navigation-link" href="blank.html">Контакты</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
-    <main>
+    <main class="page-main">
       <h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
-      <section>
+      <section class="slider">
         <h2 class="visually-hidden">Подборка товаров</h2>
-        <ul>
-          <li>
+        <ul class="slider-list">
+          <li class="slider-item">
             <h3 class="visually-hidden">Селфи-палка</h3>
-            <img src="https://via.placeholder.com/384x486" alt="Три селфи-палки длиной восемь метров" width="384" height="486">
-            <p>Делай селфи, как Бен Стиллер!</p>
-            <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-            <a href="blank.html">Подробнее</a>
-            <table>
-              <tr>
+            <img src="img/slider-sticks.png" alt="Три селфи-палки длиной восемь метров" width="384" height="486">
+            <p class="slider-slogan">Делай селфи, как Бен Стиллер!</p>
+            <p class="slider-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+            <a class="button slider-button" href="blank.html">Подробнее</a>
+            <table class="slider-table">
+              <tr class="slider-table-data">
                 <td>8,5 м</td>
                 <td>5 кг</td>
                 <td>Карбон</td>
               </tr>
-              <tr>
+              <tr class="slider-table-headings">
                 <th>Длина палки</th>
                 <th>Вес палки</th>
                 <th>Материал</th>
               </tr>
             </table>
           </li>
-          <li>
+          <li class="slider-item">
             <h3 class="visually-hidden">Фитнес-браслет</h3>
-            <img src="https://via.placeholder.com/345x485" alt="Фитнес-браслет, показывающий сообщение на экране «Я вижу, что ты снова ешь»" width="345" height="485">
-            <p>Худеем правильно!</p>
-            <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-            <a href="blank.html">Подробнее</a>
-            <table>
-              <tr>
+            <img src="img/slider-bracelet.png" alt="Фитнес-браслет, показывающий сообщение на экране «Я вижу, что ты снова ешь»" width="345" height="485">
+            <p class="slider-slogan">Худеем правильно!</p>
+            <p class="slider-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+            <a class="button slider-button" href="blank.html">Подробнее</a>
+            <table class="slider-table">
+              <tr class="slider-table-data">
                 <td>48 часов</td>
               </tr>
-              <tr>
+              <tr class="slider-table-headings">
                 <th>Без подзарядки</th>
               </tr>
             </table>
           </li>
-          <li>
+          <li class="slider-item">
             <h3 class="visually-hidden">Квадрокоптер</h3>
-            <img src="https://via.placeholder.com/526x334" alt="Квадрокоптер, выпускающий мощный красный лазер из камеры" width="526" height="334">
-            <p>Порхает как бабочка, жалит как пчела!</p>
-            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-            <a href="blank.html">Подробнее</a>
-            <table>
-              <tr>
+            <img src="img/slider-quadrocopter.png" alt="Квадрокоптер, выпускающий мощный красный лазер из камеры" width="526" height="334">
+            <p class="slider-slogan">Порхает как бабочка, жалит как пчела!</p>
+            <p class="slider-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+            <a class="button slider-button" href="blank.html">Подробнее</a>
+            <table class="slider-table">
+              <tr class="slider-table-data">
                 <td>800 м</td>
                 <td>50 м</td>
               </tr>
-              <tr>
+              <tr class="slider-table-headings">
                 <th>Дальность полета</th>
                 <th>Радиус поражения</th>
               </tr>
             </table>
           </li>
         </ul>
-        <div>
+        <div class="slider-controls">
           <a href="#" aria-label="Первый слайд"></a>
           <a href="#" aria-label="Второй слайд"></a>
           <a href="#" aria-label="Третий слайд"></a>
         </div>
       </section>
-      <section>
+      <section class="popular">
         <h2 class="visually-hidden">Популярные товары</h2>
-        <ul>
+        <ul class="popular-list">
           <li>Виртуальная реальность</li>
           <li>Моноподы для селфи</li>
           <li>Экшн-камеры</li>
@@ -136,127 +139,119 @@
           <li>Квадрокоптеры</li>
         </ul>
       </section>
-      <section>
+      <section class="services">
         <h2 class="visually-hidden">Услуги нашего магазина</h2>
-        <ul>
+        <ul class="services-buttons-list">
           <li>
-            <a href="#">Доставка</a>
+            <a class="button services-button" href="#">Доставка</a>
           </li>
           <li>
-            <a href="#">Гарантия</a>
+            <a class="button services-button" href="#">Гарантия</a>
           </li>
           <li>
-            <a href="#">Кредит</a>
+            <a class="button services-button" href="#">Кредит</a>
           </li>
         </ul>
-        <ul>
+        <ul class="services-list">
           <li>
-            <h3>Доставка</h3>
-            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+            <h3 class="services-title">Доставка</h3>
+            <p class="services-text">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
           </li>
           <li>
-            <h3>Гарантия</h3>
-            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам новый.<br> Товар, не дом, конечно.</p>
+            <h3 class="services-title">Гарантия</h3>
+            <p class="services-text">Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам новый.<br> Товар, не дом, конечно.</p>
           </li>
           <li>
-            <h3>Кредит</h3>
-            <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные<br> условия кредита. Выгодные для нашего банка, разумеется.</p>
+            <h3 class="services-title">Кредит</h3>
+            <p class="services-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные<br> условия кредита. Выгодные для нашего банка, разумеется.</p>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="partners">
         <h2 class="visually-hidden">Наши партнеры</h2>
-        <ul>
+        <ul class="partners-list">
           <li>
-            <img src="https://via.placeholder.com/260x100" alt="Логотип компании ДиДжиАй" width="260" height="100">
+            <img src="img/logo-dji-gray.jpg" alt="Логотип компании ДиДжиАй" width="260" height="100">
           </li>
           <li>
-            <img src="https://via.placeholder.com/260x100" alt="Логотип компании ЭсПи Гаджетс" width="260" height="100">
+            <img src="img/logo-gadgets-gray.jpg" alt="Логотип компании ЭсПи Гаджетс" width="260" height="100">
           </li>
           <li>
-            <img src="https://via.placeholder.com/260x100" alt="Логотип компании ГоПро" width="260" height="100">
+            <img src="img/logo-gopro-gray.jpg" alt="Логотип компании ГоПро" width="260" height="100">
           </li>
           <li>
-            <img src="https://via.placeholder.com/260x100" alt="Логотип компании Виве" width="260" height="100">
+            <img src="img/logo-vive-gray.jpg" alt="Логотип компании Виве" width="260" height="100">
           </li>
         </ul>
       </section>
-      <section>
-        <h2>О нас</h2>
-        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-        <ul>
+      <section class="about-us">
+        <h2 class="about-us-heading">О нас</h2>
+        <p class="about-us-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p class="about-us-text">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+        <ul class="about-us-transport-list">
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-        <a href="blank.html">Подробнее о нас</a>
+        <a class="button about-us-button" href="blank.html">Подробнее о нас</a>
       </section>
-      <section>
-        <h2>Контакты</h2>
-        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        <img src="https://via.placeholder.com/560x222" alt="Офис магазина по адресу город Москва, улица строителей, дом 15" width="560" height="222">
-        <a href="blank.html">Напишите нам</a>
+      <section class="contacts">
+        <h2 class="contacts-heading">Контакты</h2>
+        <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+        <img src="img/map.jpg" alt="Офис магазина по адресу город Москва, улица строителей, дом 15" width="560" height="222">
+        <a class="button contacts-button" href="blank.html">Напишите нам</a>
       </section>
     </main>
-    <footer>
-      <nav>
-        <a>
-          <img src="https://via.placeholder.com/163x35" alt="Логотип магазина «Девайс»" width="163" height="35">
+    <footer class="page-footer">
+      <div class="footer-navigation">
+        <a class="footer-logo">
+          <img src="img/logo-device-footer.svg" alt="Логотип магазина «Девайс»" width="163" height="35">
         </a>
-        <ul>
+        <ul class="footer-user-navigation">
           <li>
-            <a href="blank.html">Войти</a>
+            <a class="footer-user-navigation-link" href="blank.html">Войти</a>
           </li>
           <li>
-            <a href="blank.html">Сравнить</a>
+            <a class="footer-user-navigation-link" href="blank.html">Сравнить</a>
           </li>
           <li>
-            <a href="blank.html">Корзина</a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <a href="blank.html">Доставка</a>
-          </li>
-          <li>
-            <a href="blank.html">Гарантия</a>
-          </li>
-          <li>
-            <a href="blank.html">Контакты</a>
+            <a class="footer-user-navigation-link" href="blank.html">Корзина</a>
           </li>
         </ul>
-      </nav>
-      <section>
+        <ul class="footer-site-navigation">
+          <li>
+            <a class="footer-site-navigation-link" href="blank.html">Доставка</a>
+          </li>
+          <li>
+            <a class="footer-site-navigation-link" href="blank.html">Гарантия</a>
+          </li>
+          <li>
+            <a class="footer-site-navigation-link" href="blank.html">Контакты</a>
+          </li>
+        </ul>
+      </div>
+      <section class="footer-contacts">
         <h2 class="visually-hidden">Как нас найти</h2>
-        <p>г. Москва, ул. Строителей, 15</p>
-        <p>Тел.:
-          <a href="tel:+74954959595">+7 (495) 495-95-95</a>
+        <p class="footer-contacts-text">г. Москва, ул. Строителей, 15</p>
+        <p class="footer-contacts-text">Тел.:
+          <a class="footer-contacts-phone-link" href="tel:+74954959595">+7 (495) 495-95-95</a>
         </p>
       </section>
-      <section>
+      <section class="footer-social">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
-        <ul>
+        <ul class="footer-social-list">
           <li>
-            <a href="#" aria-label="Фейсбук">
-              <img src="https://via.placeholder.com/32x32" alt="Наша страничка в Фейсбуке" width="32" height="32">
-            </a>
+            <a class="footer-social-link" href="#" aria-label="Фейсбук"></a>
           </li>
           <li>
-            <a href="#" aria-label="Инстаграм">
-              <img src="https://via.placeholder.com/32x32" alt="Наш аккаунт в Инстаграме" width="32" height="32">
-            </a>
+            <a class="footer-social-link" href="#" aria-label="Инстаграм"></a>
           </li>
           <li>
-            <a href="#" aria-label="Твиттер">
-              <img src="https://via.placeholder.com/32x32" alt="Наш аккаунт в Твиттере" width="32" height="32">
-            </a>
+            <a class="footer-social-link" href="#" aria-label="Твиттер"></a>
           </li>
         </ul>
       </section>
-      <a href="https://https://htmlacademy.ru/intensive/htmlcss" aria-label="Онлайн-курс «Профессиональная вёрстка сайтов»">
-        <img src="https://via.placeholder.com/27x34" alt="Наш аккаунт в Твиттере" width="27" height="34">
-      </a>
+      <a href="https://https://htmlacademy.ru/intensive/htmlcss" aria-label="Онлайн-курс «Профессиональная вёрстка сайтов»"></a>
     </footer>
   </body>
 </html>
